syntax = "proto3";

package example;

message BaseInput {
   string AppVersion = 1;
   SourceWayEnum SourceWayEnum = 2;
   string TerminalExt = 3;
   string IMEI = 4;
   string OpenId = 5;
}
message HouseContractListInput {
   BaseInput BaseInput = 1;
   int32 PageIndex = 2;
   int32 PageSize = 3;
   int32 StatusId = 4;
   string KeyWordName = 5;
   int64 UnixBeginDate = 6;
   int64 UnixEndDate = 7;
}
enum SourceWayEnum {
   NoSettingSourceWay = 0;
   IOS = 20;
   Android = 30;
   Web = 40;
}
