syntax = "proto3";

package example;

message BaseOutput {
   bool IsSuccess = 1;
   string ErrorMessage = 2;
   string ErrorCode = 3;
}

message HouseContractListDto {
   int32 ContractId = 1;
   string ContractCode = 2;
   int64 CompanyId = 3;
   string CompanyName = 4;
   string RegCapital = 5;
   string ComSignName = 6;
   string LinkNamePhone = 7;
   int64 UnixEstiblishTime = 8;
   int32 StatusId = 9;
   double Longitude = 10;
   double Latitude = 11;
   int64 UnixCreateTime = 12;
   int32 IsFastSign = 13;
   string CompanyLogo = 14;
}

message HouseContractListOutput {
   BaseOutput BaseOutput = 1;
   int32 TotalRow = 2;
   repeated HouseContractListDto ContractListDtos = 3;
}
